Fixed issue for temporary url

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Toughee/MyLibbb.git"
+    "url": "git+https://github.com/Toughee/iLib.git"
   },
   "author": "Tjdev7",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Toughee/MyLibbb/issues"
+    "url": "https://github.com/Toughee/iLib/issues"
   },
   "homepage": "https://toughee.github.io/MyLibbb/",
   "dependencies": {
