--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,22 @@
 {
-    "parser": "babel-eslint",
-    "extends": "react",
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
+  "parser": "@babel/eslint-parser",
+  "extends": [
+    "react",
+    "prettier"
+  ],
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
-  }
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
+  },
+}
