--- a/package.json
+++ b/package.json
@@ -1,37 +1,73 @@
 {
   "name": "mylibbb",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "description": "Library inventory system. Created using MERN stack",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test",
     "cleaner": "npx prettier --write '**/*.js'&&npx prettier --write '**/*.css'&&npx prettier --write '**/*.html'",
     "audits": "yarn install&&npm-update-all&&npm audit&&npm audit fix&& yarn audit",
     "predeploy": "npm run build",
-    "deploy": "npm run build&&gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build",
+    "litereport": "lighthouse http://localhost:3000/ --output json --output csv --output html --output-path tests/Lighthouse_audits/Lite.html --view | lighthouse-ci http://localhost:3000/",
+    "fullpr": "git add .&&git commit&&git:wq push&&git merge"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Toughee/iLib.git"
+    "url": "git+https://github.com/tjdev7/MyLibbb.git"
   },
   "author": "Tjdev7",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Toughee/MyLibbb/issues"
+    "url": "https://github.com/tjdev7/MyLibbb/issues"
   },
   "homepage": "https://toughee.github.io/MyLibbb/",
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "cypress": "^10.0.2",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@testing-library/react": "^13.3.0",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
+    "cypress": "^10.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.1",
+    "file-loader": "^6.2.0",
     "gh-pages": "^4.0.0",
-    "jest": "^28.1.0",
+    "image-webpack-loader": "^8.1.0",
+    "jest": "^28.1.1",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.3"
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.16",
+    "npm-upgrade": "^3.1.0",
+    "path": "^0.12.7",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
